k8s/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: find-pepe
  labels:
    name: find-pepe
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
