k8s/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: find-pepe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app
            port:
              name: http-app
        path: /
        pathType: Prefix
      - backend:
          service:
            name: server
            port:
              name: http-server
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
